//
// Created by alexr on 22/03/2021.
//

#ifndef ADASHIP2_CONSOLECOLOR_H
#define ADASHIP2_CONSOLECOLOR_H


enum ConsoleColor {
    FOREGROUND_BLACK,
    FOREGROUND_RED,
    FOREGROUND_GREEN,
    FOREGROUND_YELLOW,
    FOREGROUND_BLUE,
    FOREGROUND_PURPLE,
    FOREGROUND_CYAN,
    FOREGROUND_WHITE,
};


#endif //ADASHIP2_CONSOLECOLOR_H
