//
// Created by alexr on 11/01/2021.
//

#ifndef ADAADVANCEDPROGRAMMING_1_MATHSHELPER_H
#define ADAADVANCEDPROGRAMMING_1_MATHSHELPER_H

#include <string>
#include <iostream>
#include <list>
using namespace std;

class mathshelper {
public:
    /// Generate a random number
    /// \param maxNumber Maximum random number
    /// \return Randomly generated integer
    static int generatePickedNumber(int maxNumber);
};


#endif //ADAADVANCEDPROGRAMMING_1_MATHSHELPER_H
