//
// Created by alexr on 22/03/2021.
//

#ifndef ADASHIP2_MENU_H
#define ADASHIP2_MENU_H


class Menu {
public:
    /// Code to execute when to start the menu
    static void start();
};


#endif //ADASHIP2_MENU_H
