//
// Created by alexr on 22/03/2021.
//

#ifndef ADASHIP2_PLAYERTYPE_H
#define ADASHIP2_PLAYERTYPE_H


enum PlayerType{
    Real,
    Computer,
    Generic
};


#endif //ADASHIP2_PLAYERTYPE_H
