@startuml





/' Objects '/

class AiPlayer {
	+AiPlayer()
	+AiPlayer(bool bombMode)
	+type() : PlayerType
	+init() : void
	+shoot() : void {query}
	+takeTurn() : void
}


class Board {
	+getSizeX() : int {query}
	+getSizeY() : int {query}
	-sizeX : int
	-sizeY : int
	+setSizeX(int sizeX) : void
	+setSizeY(int sizeY) : void
}


class Constants {
	+{static} GetInvalidMine() : Mine
	+{static} GetInvalidShip() : Ship
}


class Coord {
	+Coord(int row, const std::string& col)
	+getRow() : int {query}
	-row : int
	-col : std::string
	+getCol() : std::string& {query}
}


class Game {
	+Game()
	+getGameGrid() : Grid& {query}
	+getActivePlayer() : Player* {query}
	+getOpponentPlayer() : Player* {query}
	+getPlayer1() : Player* {query}
	+getPlayer2() : Player* {query}
	-salvoMode : bool
	+DisplayAllGrids() : void
	+DisplayOpponentGrid() : void
	+HitOpponent(int row, std::string col) : void
	+NextPlayer() : void
	+SetActivePlayer(Player* player) : void
	+Start() : void
	+{static} printIconDef() : void
	+setActivePlayer(Player* activePlayer) : void
	+setGameGrid(const Grid& gameGrid) : void
	+setPlayer1(Player* player1) : void
	+setPlayer2(Player* player2) : void
}


class Grid {
	-game : Game*
	+getGame() : Game* {query}
	+getPlayer() : Player* {query}
	-player : Player*
	+shipForCoord(int row, const std::string& col) : Ship {query}
	+coordHit(int row, const std::string& col) : bool {query}
	-rows : int
	+shipIdForCoord(int row, const std::string& col) : std::string {query}
	+print() : void {query}
	+setGame(Game* game) : void
	+setPlayer(Player*& player) : void
}


class Logger {
	+{static} Debug(std::string msg) : void
	+{static} DebugDivider() : void
	+{static} Divider() : void
	+{static} Game(std::string msg) : void
}


class MapEntity {
	+MapEntity()
	+MapEntity(std::string id)
	-id : std::string
	+getId() : std::string& {query}
	-coordinates : std::vector<Coord>
	+getCoordinates() : std::vector<Coord>& {query}
	+setCoordinates(const std::vector<Coord>& coordinates) : void
	+setId(const std::string& id) : void
}


class Menu {
	+{static} start() : void
}


class Mine {
	+Mine(int id)
	+getPlayerBoard() : PlayerBoard* {query}
	-playerBoard : PlayerBoard*
	-exploded : bool
	+setPlayerBoard(PlayerBoard* playerBoard) : void
}


class PlayerBoard {
	+PlayerBoard(Player* player1)
	+isEntityOverlapping(const MapEntity* entity) : bool
	+isHitSpot(int row, std::string col) : bool
	+getHitSpots() : std::vector<Coord>& {query}
	+getMines() : std::vector<Mine>& {query}
	+getShips() : std::vector<Ship>& {query}
	+hitSpot(int row, std::string col) : void
}


class RealPlayer {
	+RealPlayer()
	+RealPlayer(bool bombMode)
	+type() : PlayerType
	+init() : void
	-shoot() : void {query}
	-takeTurn() : void
}


class Settings {
	+{static} getBoard() : Board
	+{static} getSettingsFile() : mINI::INIStructure
	+{static} getMines() : std::vector<Mine>
	+{static} getShips() : std::vector<Ship>
}


class Ship {
	+Ship(int id)
	+getPlayerBoard() : PlayerBoard* {query}
	+isDestroyed() : bool {query}
	+isInvalid() : bool
	+getLength() : int {query}
	-name : std::string
	+getName() : std::string& {query}
	+setLength(int length) : void
	+setName(const std::string& name) : void
	+setPlayerBoard(PlayerBoard* playerBoard) : void
}


class iohelper {
	+{static} getInputBetweenRange(string question, int lowerRange, int higherRange) : int
	+{static} getInput(string question, const string& regex) : std::string
	+{static} clearScreen() : void
	+{static} setDefaultFontColor() : void
	+{static} setFontColor(ConsoleColor code) : void
}


class mathshelper {
	+{static} generatePickedNumber(int maxNumber) : int
}


class stringhelper {
	+{static} lettersToNumber(std::string s) : int
	+{static} numberToLetters(int num) : std::string
}


enum ConsoleColor {
	FOREGROUND_BLACK
	FOREGROUND_BLUE
	FOREGROUND_CYAN
	FOREGROUND_GREEN
	FOREGROUND_PURPLE
	FOREGROUND_RED
	FOREGROUND_WHITE
	FOREGROUND_YELLOW
}


enum PlayerType {
	Computer
	Generic
	Real
}


class Player {
	+Player()
	-game : Game*
	+getGame() : Game* {query}
	+getBoard() : PlayerBoard* {query}
	+type() : PlayerType
	-bombsMode : bool
	+isBombsMode() : bool {query}
	+isSalvoMode() : bool {query}
	-salvoMode : bool
	+init() : void
	+setBoard(PlayerBoard* board) : void
	+setBombsMode(bool bombsMode) : void
	+setGame(Game* game) : void
	+setSalvoMode(bool salvoMode) : void
	+takeTurn() : void
}


namespace mINI {
	class INIFile {
		+INIFile(std::string const& filename)
		+~INIFile()
		+generate(INIMap<INIMap<std::string>> data, bool pretty) : bool {query}
		+read(INIMap<INIMap<std::string>> data) : bool {query}
		+write(INIMap<INIMap<std::string>> data, bool pretty) : bool {query}
		-filename : std::string
	}

	class INIGenerator {
		+INIGenerator(std::string const& filename)
		+~INIGenerator()
		+operator<<(INIMap<INIMap<std::string>> data) : bool
		+prettyPrint : bool
		-fileWriteStream : std::ofstream
	}

	class INIMap <template<typename T>> {
		+INIMap()
		+INIMap(INIMap const& other)
		+get(std::string key) : T {query}
		+operator[](std::string key) : T&
		+has(std::string key) : bool {query}
		+remove(std::string key) : bool
		+begin() : const_iterator {query}
		+end() : const_iterator {query}
		-setEmpty(std::string& key) : std::size_t
		+size() : std::size_t {query}
		-dataIndexMap : unordered_map<std::string, std::size_t>
		-data : vector<T_DataItem>
		+clear() : void
		+set(std::string key, T obj) : void
		+set(typename vector<std::pair<std::string, T>> multiArgs) : void
	}

	class INIReader {
		+INIReader(std::string const& filename, bool keepLineData)
		+~INIReader()
		-readFile() : T_LineData
		+getLines() : T_LineDataPtr
		+operator>>(INIMap<INIMap<std::string>> data) : bool
		-lineData : shared_ptr<T_LineData>
		-fileReadStream : std::ifstream
	}

	class INIWriter {
		+INIWriter(std::string const& filename)
		+~INIWriter()
		-getLazyOutput(shared_ptr<T_LineData> lineData, INIMap<INIMap<std::string>> data, INIMap<INIMap<std::string>> original) : T_LineData
		+operator<<(INIMap<INIMap<std::string>> data) : bool
		+prettyPrint : bool
		-filename : std::string
	}

	namespace mINI::INIParser {
		enum PDataType {
			PDATA_COMMENT
			PDATA_KEYVALUE
			PDATA_NONE
			PDATA_SECTION
			PDATA_UNKNOWN
		}
	}
}





/' Inheritance relationships '/

.Board <|-- .PlayerBoard


.MapEntity <|-- .Mine


.MapEntity <|-- .Ship


.Player <|-- .AiPlayer


.Player <|-- .RealPlayer





/' Aggregation relationships '/

.Grid o-- .Game


.Grid o-- .Player


.MapEntity *-- .Coord


.Mine o-- .PlayerBoard


.Player o-- .Game






/' Dependency relationships '/

.Board <.. .Mine


.Board <.. .Player


.Board <.. .Ship


.ConsoleColor <.. .iohelper


.Coord <.. .MapEntity


.Game <.. .Grid


.Game <.. .Player


.Grid <.. .Game


mINI.INIMap <.. mINI.INIFile


mINI.INIMap <.. mINI.INIFile


mINI.INIMap <.. mINI.INIFile


mINI.INIMap <.. mINI.INIGenerator


mINI.INIMap <.. mINI.INIMap


mINI.INIMap <.. mINI.INIReader


mINI.INIMap <.. mINI.INIWriter


mINI.INIMap <.. mINI.INIWriter


mINI.INIMap <.. mINI.INIWriter


.MapEntity <.. .PlayerBoard


.Player <.. .Game


.Player <.. .Game


.Player <.. .Game


.Player <.. .Game


.Player <.. .Grid


.Player <.. .PlayerBoard






/' Nested objects '/



@enduml
